# get

./: Cargo.toml
src/: lib.rs
tests/: get.rs
tests/trybuild/: hidden-field.rs  hidden-field.stderr  invalid-attribute.rs  invalid-attribute.stderr  tuple-struct-without-attribute.rs  tuple-struct-without-attribute.stderr  unit-struct.rs  unit-struct.stderr
